# ice-telescope-ros

./: CHANGELOG  CHANGES  CMakeLists.txt  README  README.md  package.xml
docs/: ._ros-telescope.cfg  ._ros-telescope.sty  ._ros-telescope.tex  ._ros-telescope2.tex  ros-telescope.cfg  ros-telescope.html  ros-telescope.man  ros-telescope.sty  ros-telescope.tex  ros-telescope2.tex
include/ice_telescope/: ApcPdu.h  BaaderDome.h  MeadeTelescope.h  SbigCcd.h  TelAppDialog.h  VaisalaWS.h  baader_dome.h  csbigcam.h  csbigimg.h  lpardrv.h  lx200gps.h  sbigudrv.h  snmp_com.h  tty_com.h  vaisala_ws.h
scripts/: test_run.sh
src/clients/: TelApp.cpp  TelAppDialog.cpp  apc_client.cpp  baader_client.cpp  baader_client.py  meade_client.cpp  meade_client.py  sbig_client.cpp  sbig_client.py  vaisala_client.cpp
src/devices/: ApcPdu.cpp  BaaderDome.cpp  MeadeTelescope.cpp  SbigCcd.cpp  VaisalaWS.cpp
src/dome/: baader_dome.c
src/drivers/: baader_dome.c  csbigcam.cpp  csbigimg.cpp  lx200gps.c  snmp_com.c  tty_com.c  vaisala_ws.c
src/servers/: ._sbig_server.cpp  apc_server.cpp  baader_server.cpp  ice_tel_server.cpp  meade_server.cpp  sbig_server.cpp  vaisala_server.cpp
srv/: apc.srv  baader.srv  meade.srv  sbig.srv  vaisala.srv
