<?xml version="1.0"?>
<package format="2">
  <name>ice_telescope</name>
  <version>0.1.3</version>
  <description>The ICE Telescope ROS package</description>

  <maintainer email="github@ieec.cat">Francesc Vilardell Sallés</maintainer>
  <license>GPLv3</license>
  <url type="website">https://www.ice.csic.es/en/content/85/astroearth-laboratory</url>
  <!-- <url type="website">http://wiki.ros.org/ice_telescope</url> -->

  <author email="github@ieec.cat">Biel Artigues Aguilo</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <build_depend>libqt4-dev</build_depend>
  <build_depend>qt4-qmake</build_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>libqt4</exec_depend>

</package>
